--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
                 <div class="card-body">
                   <h5 class="card-title">iStore</h5>
                   <p class="card-text">Homepage for a mobile product, I was practising Bootstrap here.</p>
-                  <a href="https://kp4418.github.io/AppleStore" class="btn btn-primary">Visit</a>
+                  <a href="https://kp4418.github.io/AppleStore/" class="btn btn-primary">Visit</a>
                 </div>
               </div>
               <div class="card mx-auto my-3" style="width: 18rem;">
@@ -42,7 +42,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Perfectisimo Pizzeria</h5>
                   <p class="card-text">I designed a pizza ordering site here, I had to do this for my second exam, where we learned Bootstrap</p>
-                  <a href="#" class="btn btn-primary">Visit</a>
+                  <a href="https://kp4418.github.io/Perfectisimo/" class="btn btn-primary">Visit</a>
                 </div>
               </div>
               <div class="card mx-auto my-3" style="width: 18rem;">
