--- a/projects.html
+++ b/projects.html
@@ -34,23 +34,23 @@
                 <div class="card-body">
                   <h5 class="card-title">iStore</h5>
                   <p class="card-text">Homepage for a mobile product, I was practising Bootstrap here.</p>
-                  <a href="https://kp4418.github.io/AppleStore/" class="btn btn-primary">Visit</a>
+                  <a href="https://kp4418.github.io/AppleStore/" class="btn btn-primary w-100">Visit</a>
                 </div>
               </div>
               <div class="card mx-auto my-3" style="width: 18rem;">
                 <img src="./Perfectisimo.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Perfectisimo Pizzeria</h5>
-                  <p class="card-text">I designed a pizza ordering site here, I had to do this for my second exam, where we learned Bootstrap</p>
-                  <a href="https://kp4418.github.io/Perfectisimo/" class="btn btn-primary">Visit</a>
+                  <p class="card-text">I designed a pizza ordering site here, I had to do this for my second exam.</p>
+                  <a href="https://kp4418.github.io/Perfectisimo/" class="btn btn-primary w-100">Visit</a>
                 </div>
               </div>
               <div class="card mx-auto my-3" style="width: 18rem;">
                 <img src="./Basics.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Exam, basics of HTML and CSS</h5>
-                  <p class="card-text">The homepage I needed to do for my first exam in my hungarian remote school.</p>
-                  <a href="#" class="btn btn-primary disabled">Not on GitHub yet</a>
+                  <p class="card-text">My first exam in my hungarian remote school.</p>
+                  <a href="#" class="btn btn-primary disabled w-100">Not on GitHub yet</a>
                 </div>
               </div>
 
