--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         <div class="col-2"></div>
 
         <div class="col-8 bg-body-secondary rounded rounded-2 text-center">
+          <div class="py-2">
             Learning Frontend development
-
+          </div>
         </div>
 
         <div class="col-2"></div>
