Making CV more simple

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="./projects.html">Projects</a>
-              <a class="nav-link" href="#"></a>
-              <a class="nav-link" href="#"></a>
+              <a class="nav-link" aria-current="page" href="./index.html">GitPic</a>
+              <a class="nav-link" aria-current="page" href="./index.html">LinkedInPic</a>
             </div>
           </div>
         </div>
@@ -27,10 +25,33 @@
       <div class="row col-12 bg-dark mt-5">
         <div class="col-2"></div>
 
-        <div class="col-8 bg-body-secondary rounded rounded-2 text-center">
-          <div class="py-2">
-            Learning Frontend development
-          </div>
+        <div class="row col-8 bg-body-secondary rounded rounded-2 text-center justify-content-center">
+            <div class="h1 mt-3">Projects</div><hr/>
+            <div class="card mx-auto my-3" style="width: 18rem;">
+                <img src="./Apple.png" class="card-img-top" alt="AppleStore">
+                <div class="card-body">
+                  <h5 class="card-title">iStore</h5>
+                  <p class="card-text">Homepage for a mobile product, I was practising Bootstrap here.</p>
+                  <a href="https://kp4418.github.io/AppleStore/" class="btn btn-primary w-100">Visit</a>
+                </div>
+              </div>
+              <div class="card mx-auto my-3" style="width: 18rem;">
+                <img src="./Perfectisimo.png" class="card-img-top" alt="Pizzeria">
+                <div class="card-body">
+                  <h5 class="card-title">Perfectisimo Pizzeria</h5>
+                  <p class="card-text">I designed a pizza ordering site here, I had to do this for my second exam.</p>
+                  <a href="https://kp4418.github.io/Perfectisimo/" class="btn btn-primary w-100">Visit</a>
+                </div>
+              </div>
+              <div class="card mx-auto my-3" style="width: 18rem;">
+                <img src="./Basics.png" class="card-img-top" alt="BasicHTMLPage">
+                <div class="card-body">
+                  <h5 class="card-title">Exam, basics of HTML and CSS</h5>
+                  <p class="card-text">My first exam in my hungarian remote school.</p>
+                  <a href="kp4418.github.io/HTMLBasicsExam/" class="btn btn-primary disabled w-100">Visit</a>
+                </div>
+              </div>
+
         </div>
 
         <div class="col-2"></div>
