--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Exam, basics of HTML and CSS</h5>
                   <p class="card-text">My first exam in my hungarian remote school.</p>
-                  <a href="kp4418.github.io/HTMLBasicsExam/" class="btn btn-primary disabled w-100">Visit</a>
+                  <a href="https://kp4418.github.io/HTMLBasicsExam/" class="btn btn-primary disabled w-100">Visit</a>
                 </div>
               </div>
 
