Adding more projects, and linking the source codes

--- a/index.html
+++ b/index.html
@@ -28,11 +28,21 @@
         <div class="row col-8 bg-body-secondary rounded rounded-2 text-center justify-content-center">
             <div class="h1 mt-3">Projects</div><hr/>
             <div class="card mx-auto my-3" style="width: 18rem;">
+              <img src="./Basics.png" class="card-img-top" alt="BasicHTMLPage">
+              <div class="card-body">
+                <h5 class="card-title">JavaScript Exam</h5>
+                <p class="card-text">Third exam at my Frontend course</p>
+                <a href="https://kp4418.github.io/HTMLBasicsExam/" class="btn btn-primary w-100 mb-2">Visit</a>
+                <a href="https://github.com/KP4418/HTMLBasicsExam" class="btn btn-primary w-100"><img src="./github-mark-white.png" style="height: 16px;"></a>
+              </div>
+            </div>
+            <div class="card mx-auto my-3" style="width: 18rem;">
                 <img src="./Apple.png" class="card-img-top" alt="AppleStore">
                 <div class="card-body">
                   <h5 class="card-title">iStore</h5>
                   <p class="card-text">Homepage for a mobile product, I was practising Bootstrap here.</p>
-                  <a href="https://kp4418.github.io/AppleStore/" class="btn btn-primary w-100">Visit</a>
+                  <a href="https://kp4418.github.io/AppleStore/" class="btn btn-primary w-100 mb-2">Visit</a>
+                  <a href="https://github.com/KP4418/AppleStore" class="btn btn-primary w-100"><img src="./github-mark-white.png" style="height: 16px;"></a>
                 </div>
               </div>
               <div class="card mx-auto my-3" style="width: 18rem;">
@@ -40,7 +50,8 @@
                 <div class="card-body">
                   <h5 class="card-title">Perfectisimo Pizzeria</h5>
                   <p class="card-text">I designed a pizza ordering site here, I had to do this for my second exam.</p>
-                  <a href="https://kp4418.github.io/Perfectisimo/" class="btn btn-primary w-100">Visit</a>
+                  <a href="https://kp4418.github.io/Perfectisimo/" class="btn btn-primary w-100 mb-2">Visit</a>
+                  <a href="https://github.com/KP4418/Perfectisimo" class="btn btn-primary w-100"><img src="./github-mark-white.png" style="height: 16px;"></a>
                 </div>
               </div>
               <div class="card mx-auto my-3" style="width: 18rem;">
@@ -48,9 +59,11 @@
                 <div class="card-body">
                   <h5 class="card-title">Exam, basics of HTML and CSS</h5>
                   <p class="card-text">My first exam in my hungarian remote school.</p>
-                  <a href="https://kp4418.github.io/HTMLBasicsExam/" class="btn btn-primary disabled w-100">Visit</a>
+                  <a href="https://kp4418.github.io/HTMLBasicsExam/" class="btn btn-primary w-100 mb-2">Visit</a>
+                  <a href="https://github.com/KP4418/HTMLBasicsExam" class="btn btn-primary w-100"><img src="./github-mark-white.png" style="height: 16px;"></a>
                 </div>
               </div>
+              
 
         </div>
 
