Adding extra infos

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" aria-current="page" href="./index.html">GitPic</a>
-              <a class="nav-link" aria-current="page" href="./index.html">LinkedInPic</a>
+              <a class="nav-link" aria-current="page" href="https://github.com/KP4418"><img src="./github-mark-white.png" style="height: 16px;"></a>
+              <a class="nav-link" aria-current="page" href="https://www.linkedin.com/in/kiss-patrik-13710a201/"><img src="./linkedin.png" style="height: 16px;"></a>
             </div>
           </div>
         </div>
@@ -28,12 +28,12 @@
         <div class="row col-8 bg-body-secondary rounded rounded-2 text-center justify-content-center">
             <div class="h1 mt-3">Projects</div><hr/>
             <div class="card mx-auto my-3" style="width: 18rem;">
-              <img src="./Basics.png" class="card-img-top" alt="BasicHTMLPage">
+              <img src="./jsexam.png" class="card-img-top" alt="BasicHTMLPage">
               <div class="card-body">
                 <h5 class="card-title">JavaScript Exam</h5>
-                <p class="card-text">Third exam at my Frontend course</p>
-                <a href="https://kp4418.github.io/HTMLBasicsExam/" class="btn btn-primary w-100 mb-2">Visit</a>
-                <a href="https://github.com/KP4418/HTMLBasicsExam" class="btn btn-primary w-100"><img src="./github-mark-white.png" style="height: 16px;"></a>
+                <p class="card-text">Third exam with three calculating tasks in my Frontend course</p>
+                <a href="https://kp4418.github.io/JavaScriptExam/" class="btn btn-primary w-100 mb-2">Visit</a>
+                <a href="https://github.com/KP4418/JavaScriptExam" class="btn btn-primary w-100"><img src="./github-mark-white.png" style="height: 16px;"></a>
               </div>
             </div>
             <div class="card mx-auto my-3" style="width: 18rem;">
