--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="navbar-nav">
               <a class="nav-link" aria-current="page" href="https://github.com/KP4418"><img src="./github-mark-white.png" style="height: 16px;"></a>
               <a class="nav-link" aria-current="page" href="https://www.linkedin.com/in/kiss-patrik-13710a201/"><img src="./linkedin.png" style="height: 16px;"></a>
+              <a class="nav-link" aria-current="page" href="mailto:kisspatrik0602@gmail.com"><img src="./mailto.png" style="height: 16px;"></a>
             </div>
           </div>
         </div>
